--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -3,7 +3,7 @@ title: Overview
 description: Create resolvers to compute feature values.
 ---
 
-import { TipInfo } from '@/components/Tip'
+import {TipInfo} from '@/components/Tip'
 
 ---
 
@@ -12,7 +12,8 @@ their relationships, and their properties), resolvers define how your feature va
 are computed.
 
 <TipInfo>
-If you haven't read the section on feature sets, you are strongly encourage to do so. Understanding feature sets will help you understand resolvers.
+    If you haven't read the section on feature sets, you are strongly encourage to do so. Understanding feature sets
+    will help you understand resolvers.
 </TipInfo>
 
 Resolvers have four main components: inputs, outputs, code, and run conditions.
@@ -42,10 +43,10 @@ Chalk allows you to write resolvers in three different ways:
 - inline in your feature definitions, with the underscore module.
 
 <TipInfo>
-You will likely write mostly python and SQL resolvers, so most of our examples
-will be for these two variants. However, underscore resolvers are a succinct and
-optimized way to write resolvers, which can be quite practical in certain cases.
-We will cover them at the end of the resolver section.
+    You will likely write mostly python and SQL resolvers, so most of our examples
+    will be for these two variants. However, underscore resolvers are a succinct and
+    optimized way to write resolvers, which can be quite practical in certain cases.
+    We will cover them at the end of the resolver section.
 </TipInfo>
 
 ## A Quick Example
@@ -94,7 +95,7 @@ from chalk import online
 @online
 def get_is_runner(
     name: User.hobbies
-) -> User.account_name_match_score:
+) -> User.is_runner:
     return "runner" in hobbies
 ```
 
@@ -109,9 +110,9 @@ only in response to a request for the features that they are responsible for com
 practice, this means that they run in response to "queries".
 
 <TipInfo>
-Resolvers can also be run on a schedule or triggered. Either approach causes them
-to: 1). excecute, in batch-job fashion, over all the data they find in your upstream
-data sources, and 2). write computed features to your offline store.
+    Resolvers can also be run on a schedule or triggered. Either approach causes them
+    to: 1). excecute, in batch-job fashion, over all the data they find in your upstream
+    data sources, and 2). write computed features to your offline store.
 </TipInfo>
 
 A query is just a request for data. Chalk takes a query and determines which resolvers it
