--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -32,6 +32,27 @@ Windowed features support much of the same functionality as normal features. The
 offline store after each window period. Windowed features often use [`default`](/api-docs#windowed.default) to set a
 default value to return when there are no messages within a time period.
 
+### Querying by windowed time range
+
+Windowed features resolved via [underscore expressions](/docs/underscore) can reference the current windowed time range
+using the `_.chalk_window` operator:
+
+```python
+@features
+class User:
+    id: int
+    total_spend: Windowed[float] = windowed(
+        "30d", "60d", "90d",
+        default=0,
+        expression=_.transactions[_.amount, _.ts > _.chalk_window].sum(),
+        materialization={"bucket_duration": "1d"},
+    )
+```
+
+In this code, the windowed feature will return the sum of transaction amounts for the given user over the last 30, 60,
+and 90 days. `_.ts > _.chalk_window` is a boolean condition checking that the current transaction's timestamp is greater
+than the start of the current window duration.
+
 ### Referencing windowed features
 
 A windowed feature can be referenced in a query or a resolver in the following, equivalent ways. Each
