--- a/changelog.mdx
+++ b/changelog.mdx
@@ -10,8 +10,11 @@ description: Updates to Chalk!
 
 * We now support [DynamoDB](/docs/dynamodb) as a native accelerated data source! After connecting your AWS credentials,
   Chalk automatically has access to your DynamoDB instance, which you can query with [PartiQL](https://partiql.org/).
-* Underscore expressions now support the `_.chalk_window` operator for [`windowed` resolvers](/docs/aggregations). Use
-  `_.chalk_window` to filter data based on the current context's time window:
+* [Underscore expressions](/docs/underscore) on [windowed](/docs/aggregations) features can now include the special
+  expression `_.chalk_window` to reference the target window duration. Use `_.chalk_window` in [windowed aggregation
+  expressions](/docs/aggregations#querying-by-windowed-time-range) to define aggregations across multiple window sizes
+  at once:
+
 ```python
 @features
 class Transaction:
