--- a/changelog.mdx
+++ b/changelog.mdx
@@ -8,6 +8,8 @@ description: Updates to Chalk!
 
 ## August 5, 2024
 
+### New features
+
 * We now support [DynamoDB](/docs/dynamodb) as a native accelerated data source! After connecting your AWS credentials,
   Chalk automatically has access to your DynamoDB instance, which you can query with [PartiQL](https://partiql.org/).
 * [Underscore expressions](/docs/underscore) on [windowed](/docs/aggregations) features can now include the special
