fix broken anchor tags

--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -315,7 +315,7 @@ postgres = PostgreSQLSource()
 ```
 
 These singleton variables can be used to query data in
-[Python SQL resolvers](/docs/sql#reading-from-sql-sources-sql-strings).
+[Python SQL resolvers](/docs/sql#sql-strings).
 They're also necessary before we can write any
 [`.chalk.sql`](/docs/sql#sql-file-resolvers)
 files, as we'll do below.
