--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,14 +5,44 @@ description: Updates to Chalk!
 
 ---
 
+## August 12, 2024
+
+### Queries can reference multiple feature namespaces
+
+Previously, you could only reference one feature namespace in your queries. Now you can request features from multiple
+feature namespaces. For example, here's a query for a specific customer and merchant:
+
+```python
+client.query(
+    input={
+        Customer.id: 12345,
+        Merchant.id: 98765,
+    },
+    output=[Customer, Merchant],
+)
+```
+
+### Dashboard resources view shows allocatable CPU and memory
+
+The resources page of the dashboard now shows the allocatable and total CPU and memory for each of your Kubernetes
+nodes. Kubernetes reserves some of each machine's resources for internal usage, so you cannot allocate 100% of a
+machine's stated resources to your system. Now, you can use the allocatable CPU and memory numbers to tune your resource
+usage with more accuracy.
+
+### Performance improvements
+We identified an improvement for our query planner’s handling of [temporal joins](/docs/temporal-consistency)! Our logic
+for finding the most recent observation for a requested timestamp is now more efficient. Happy time traveling!
 
 ## August 5, 2024
 
-### New features
+### DynamoDB with PartiQL
 
-* We now support [DynamoDB](/docs/dynamodb) as a native accelerated data source! After connecting your AWS credentials,
-  Chalk automatically has access to your DynamoDB instance, which you can query with [PartiQL](https://partiql.org/).
-* [Underscore expressions](/docs/underscore) on [windowed](/docs/aggregations) features can now include the special
+We now support [DynamoDB](/docs/dynamodb) as a native accelerated data source! After connecting your AWS credentials,
+Chalk automatically has access to your DynamoDB instance, which you can query with [PartiQL](https://partiql.org/).
+
+### Underscore expressions support references to the target window duration
+
+[Underscore expressions](/docs/underscore) on [windowed](/docs/aggregations) features can now include the special
   expression `_.chalk_window` to reference the target window duration. Use `_.chalk_window` in [windowed aggregation
   expressions](/docs/aggregations#querying-by-windowed-time-range) to define aggregations across multiple window sizes
   at once:
@@ -35,6 +65,9 @@ class User:
         materialization={"bucket_duration": "1d"},
     )
 ```
+
+### Offline queries allow resource overriding
+
 * [`offline_query`](/api-docs#ChalkClient.offline_query.resources) now supports the `resources` parameter. `resources`
   allows you to override the default resource requests associated with offline queries and cron jobs so that you can
   control CPU, memory, ephemeral volume size, and ephemeral storage.
